ended in my rules

--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -1,34 +1,21 @@
-add.basket=Добавить в корзину
-all=Итого : 
-all.products=Все продукты : 
 ask.feedback=Здесь вы можете отправить нам свои предложения и жалобы 📝
 back=🔙 Назад
-basket=🛒 Корзина\n\n
 change.lang=\uD83C\uDDF7\uD83C\uDDFAИзменить язык
 change.name=Изменить имя (%s)
 choose.lang=\uD83C\uDDFA\uD83C\uDDFFTilingizni tanlang\
 \n\n\
 \uD83C\uDDF7\uD83C\uDDFAВыберите ваш язык
-choose.product=Выберите продукт
-clear.basket=♻️Очистить корзину
-empty.orders=Вы ничего не заказывали
 feedback=💬 Обратная связь
-helper=Выберите или введите количество :
-in.basket=🛒 Корзина
 main.menu=Чем могу помочь? ☺️
-menu=Задать вопрос 🎒
-message.location=Поделитесь геолокацией, для более точной доставки продукта :
+question=Задать вопрос 🎒
 name.error=Введите корректное имя
 name.request=Введите ваше имя и фамилию (Абдуллаев Исмоил)
-order.accepted=Ваш запрос отправлен учителю. Как только мы получим ответ, сообщим в группе. Спасибо за терпение!✅
-order.menu=Уважаемый пользователь, пожалуйста, задайте ваш вопрос.
-orders=Мои заказы
+accepted=Ваш запрос отправлен учителю. Как только мы получим ответ, сообщим в группе. Спасибо за терпение!✅
+take.question=Уважаемый пользователь, пожалуйста, задайте ваш вопрос.
 settings=⚙️Настройки
 started.msg=Здравствуйте! Чтобы пользоваться нашим ботом вам необходимо пройти регистрацию.\
 \n\n\
 Давайте для начала выберем 🇷🇺 язык обслуживания.\
 
 success=Готово✅
-take.dom=Введите номер вашего дома :
-take.feedback=Мы приняли ваше сообщение 📨 При необходимости наши \nпредставители свяжутся с вами в ближайшее время
-take.order=🚗 Оформить заказ
+take.feedback=Мы приняли ваше сообщение 📨
