--- a/src/main/resources/message_uz.properties
+++ b/src/main/resources/message_uz.properties
@@ -1,28 +1,17 @@
-add.basket=Savatga qoshish
-all=Jami :
-all.products=Mahsulotlar : 
 ask.feedback=Taklif va shikoyatlaringizni bu yerda batafsil yozib qoldiring 📝
 back=🔙 Ortga
-basket=🛒 Savat\n\n
 change.lang=\uD83C\uDDFA\uD83C\uDDFFTilni o'zgartirish
 change.name=Ismni o'zgartirish (%s)
 choose.lang=\uD83C\uDDFA\uD83C\uDDFFTilingizni tanlang\
 \n\n\
 \uD83C\uDDF7\uD83C\uDDFAВыберите ваш язык
-choose.product=Maxsulotni tanlang
-clear.basket=♻️Savatni tozalash
-empty.orders=Siz hech narsa buyurtma bermagansiz
 feedback=💬 Biz bilan aloqa
-helper=Maxsulot miqdorini tanlang yoki yozib kiriting :
-in.basket=🛒 Savatda
 main.menu=Yordam kerakmi? ☺️
-menu=Savol berish 🎒
-message.location=Mahsulotni aniqroq yetkazib berish uchun bizga geolokatsiyangizni yuboring :
+question=Savol berish 🎒
 name.error=Ismingizni tog'ri kiriting
 name.request=Ismingiz va familiyangizni kiriting (Abdullayev Ismoil)
-order.accepted=Sizning so'rovingiz o'qituvchiga yuborildi. Javob olishimiz bilan guruhga xabar beramiz. Sabringiz uchun rahmat!✅
-order.menu=Hurmatli foydalanuvchi, savolingizni bering.
-orders=Mening buyurtmalarim
+accepted=Sizning so'rovingiz o'qituvchiga yuborildi. Javob olishimiz bilan guruhga xabar beramiz. Sabringiz uchun rahmat!✅
+take.question=Hurmatli foydalanuvchi, savolingizni bering.
 settings=⚙️Sozlamalar
 started.msg=Здравствуйте! Чтобы пользоваться нашим ботом вам необходимо пройти регистрацию.\
 \n\n\
@@ -34,6 +23,4 @@ Assalomu alaykum! Bizning botdan foydalanish uchun avval ro'yxatdan o'ting.\
 \n\n\
 Keling, avval xizmat ko‘rsatish 🇺🇿 tilini tanlab olaylik.
 success=Tayyor✅
-take.dom=Domingizni raqamini kiriting :
-take.feedback=Sizning xabaringiz qabul qilindi 📨 Agar kerak bo'lsa, bizning \nvakillarimiz qisqa muddatda siz bilan bog'lanishadi
-take.order=🚗 Buyurtma qilish
+take.feedback=Sizning xabaringiz qabul qilindi 📨
